// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaperIcon renders correctly 1`] = `
<Styled(Paper)>
  <Paper
    circle={false}
    className="sc-bdVaJa fGDlZB"
    rounded={true}
    transitionEnabled={true}
    zDepth={1}
  >
    <div
      className="sc-bdVaJa fGDlZB"
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#ffffff",
          "borderRadius": 2,
          "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                 0 1px 4px rgba(0, 0, 0, 0.12)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        }
      }
    />
  </Paper>
</Styled(Paper)>
`;

exports[`PaperIcon renders with circle props 1`] = `
<Styled(Paper)
  circle={true}
>
  <Paper
    circle={true}
    className="sc-bdVaJa fGDlZB"
    rounded={true}
    transitionEnabled={true}
    zDepth={1}
  >
    <div
      className="sc-bdVaJa fGDlZB"
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#ffffff",
          "borderRadius": "50%",
          "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                 0 1px 4px rgba(0, 0, 0, 0.12)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        }
      }
    />
  </Paper>
</Styled(Paper)>
`;
